# lakeon

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  DEPLOY_NOTES_WINDOWS.md  README.md  hcloud.skill  pyproject.toml  skills-lock.json
.codex/: config.toml
benchmarks/dbay_branch_version/: README.md  compare_claims.md  config.example.yaml  config.stress.yaml  pyproject.toml  run_benchmark.py
benchmarks/dbay_branch_version/dbay_branch_version/: __init__.py  cleanup.py  config.py  dbay_client.py  metrics.py  pg_workload.py  report.py  runner.py
benchmarks/dbay_branch_version/tests/: conftest.py  test_cleanup.py  test_config.py  test_dbay_client.py  test_metrics.py  test_pg_workload.py  test_report.py  test_runner.py  test_runner_orchestration.py
dbay-fuse/: .gitignore  BENCH-RESULTS.md  Cargo.toml  ONBOARDING.md  README.md
dbay-fuse/bench/: bench-e2e.py  bench-full-e2e.py  bench-full.py  bench-fuse-vs-local.py  bench.py
dbay-fuse/scripts/: rollback-cc.sh  takeover-cc.sh
dbay-fuse/src/: append_state.rs  config.rs  conflict.rs  dbay_api.rs  etag_ledger.rs  flush_watchdog.rs  hostname.rs  inmem.rs  lib.rs  main.rs  outbox.rs  passthrough.rs  profile.rs  pull.rs  sqlite_fs.rs.bak  state_scan.rs  sync.rs  takeover.rs  uplink.rs.bak  uplink_worker.rs  watch_sync.rs
dbay-fuse/tests/: test_cli_e2e.rs  test_conflict.rs  test_etag_ledger.rs  test_hostname.rs  test_profile.rs  test_pull.rs  test_sync.rs
dbay-mcp/: README.md  pyproject.toml  server.py
dbay-mcp/src/dbay_mcp/: cli.py  crypto.py  embedding.py  server.py  tool_descriptions.yaml
dbay-sre-mcp/: CHANGELOG.md  PUBLISH-0.2.0.md  README.md  pyproject.toml
dbay-sre-mcp/src/dbay_sre_mcp/: admin_client.py  lakeon_db.py  server.py
dbay-sre-mcp/src/dbay_sre_mcp/tools/: data_consistency_check.py  stuck_task_query.py
dbay-sre-mcp/tests/: test_admin_client.py  test_data_consistency_check.py  test_stuck_task_query.py
echomem/: .gitignore  README.md  pyproject.toml
echomem/.claude/: settings.local.json
echomem/.github/workflows/: dashboard-ci.yml
echomem/.vite/vitest/: results.json
echomem/dashboard/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
echomem/dashboard/src/: App.vue  main.ts  router.ts
echomem/dashboard/src/api/: client.ts  types.ts
echomem/dashboard/src/components/: AppShell.vue  Banner.vue  Button.vue  Card.vue  ColumnList.vue  Drawer.vue  EmptyState.vue  Icon.vue  QuickIngestDialog.vue  Tag.vue  Tile.vue
echomem/dashboard/src/lineage/: LineageDrawer.vue
echomem/dashboard/src/pages/: CognitionPage.vue  MemoryPage.vue  OverviewPage.vue  StatusPage.vue
echomem/dashboard/src/stores/: cognition.ts  lineage.ts  memory.ts  status.ts  ui.ts
echomem/dashboard/src/styles/: base.css  tokens.css
echomem/dashboard/tests/: setup.ts
echomem/dashboard/tests/e2e/: 01-empty-to-first-cognition.spec.ts  02-derivative-views-render.spec.ts  03-error-recovery.spec.ts  fixtures-data.ts  fixtures.ts
echomem/docs/: .dockerignore  Caddyfile  DEPLOY.md  Dockerfile  railway.json
echomem/docs/architecture/: index.html
echomem/docs/docs-viewer/: README.md  _navbar.md  _sidebar.md  index.html
echomem/docs/how-to-use/: index.html
echomem/docs/overview/: README.md
echomem/docs/pain-points/: index.html
echomem/docs/plans/: phase1-backbone.md  phase2-derivatives.md  phase3-context-api.md
echomem/docs/roadmap/: index.html
echomem/scripts/: build_dashboard.sh
echomem/src/echomem/: __main__.py  cli.py  config.py  logging.py  ollama_client.py  ulid.py
echomem/src/echomem/api/: context.py  derivatives.py  health.py  memory.py  schemas.py  skills.py
echomem/src/echomem/context/: blob_store.py  fetcher.py
echomem/tests/e2e/: test_full_loop.py  test_mcp_shim.py
echomem/tests/integration/: test_blob_pipeline_e2e.py  test_context_endpoints.py  test_daemon_lifecycle.py  test_dashboard_mount.py  test_derivatives_endpoints.py  test_diagnostic_route.py  test_embedder_pipeline.py  test_memory_endpoints.py  test_orchestrator.py  test_pipeline_e2e.py
echomem/tests/unit/: test_blob_store.py  test_cli_ctx.py  test_cli_init.py  test_cli_mem.py  test_cli_status.py  test_config.py  test_diagnostic_schemas.py  test_entity_extractor.py  test_fetcher.py  test_migrations.py  test_migrations_m002.py  test_migrations_m003.py  test_ollama_client.py  test_ollama_ping.py  test_pipeline_queue.py  test_reflector.py  test_skills_importer.py  test_smoke.py  test_sqlite_diagnostic.py  test_sqlite_driver.py  test_sqlite_driver_blob.py  test_sqlite_driver_deriv.py  test_storage_protocol.py  test_summarizer.py  test_timeline.py  test_ulid.py
lakeon-cli/: pyproject.toml
lakeon-cli/lakeon_cli/: client.py  config.py  main.py
lakeon-cli/lakeon_cli/commands/: branch.py  config.py  db.py  tenant.py
lakeon-cli/tests/: conftest.py
lakeon-cli/tests/unit/: test_branch_commands.py  test_config_commands.py  test_db_commands.py
lakeon-orchestrator/: Dockerfile  pyproject.toml
lakeon-orchestrator/src/lakeon_orchestrator/: config.py  main.py  orchestrator.py
lakeon-orchestrator/tests/: conftest.py  test_dag_parser.py  test_orchestrator.py  test_ray_client.py
log-collector/lakeon-log/: pyproject.toml
log-collector/lakeon-log/lakeon_log/: __init__.py  handler.py
log-collector/lakeon-log/tests/: test_handler.py
sdk/: pyproject.toml
sdk/dbay/: __init__.py  client.py  memory.py
sre-agent/: .env.example  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  railway.toml
sre-agent/agent_session_log/: __init__.py  log.py  obs_sync.py  session.py
sre-agent/docs/: DEPLOY_RUNBOOK.md  OPEN_ISSUES.md
sre-agent/hermes_config/: config.yaml
sre-agent/reports/: phase1-progress.md
sre-agent/scripts/: simulate_cold_start.py  sync_loop.py  verify_env.py
sre-agent/tests/: test_import_discipline.py  test_log_query.py  test_session.py
sre-agent/tests/integration/: test_cold_start_watcher.py  test_data_consistency_watcher.py  test_outcome_checker.py  test_phase_0b_cross_consumer.py  test_query_handler.py  test_url_handler.py
(+1314 files in other folders)
