# lakeon/pyproject.toml
# uv workspace root — declares member packages and shared tool config.
# This file is NOT a distributable project; it has no [project] table.
# See https://docs.astral.sh/uv/concepts/workspaces/

[tool.uv.workspace]
members = [
  # NOTE: not-yet-existing members are silently skipped by uv 0.9.x. Once a member dir is
  # created, it MUST contain a valid pyproject.toml or `uv sync` will fail.
  "packages/agent-session-log",
  "packages/hermes-agent-utils",
  "sre-agent",
  "reading-companion",
]

[tool.ruff]
line-length = 100
target-version = "py311"
