[project]
name = "dbay-mcp"
version = "0.1.0"
description = "DBay Knowledge Base MCP server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
