[project]
name = "dbay-sre-mcp"
version = "0.1.0"
description = "DBay SRE diagnostic MCP server — log search, trace, errors, stats"
requires-python = ">=3.10"
dependencies = ["fastmcp>=2.0", "psycopg2-binary>=2.9"]

[project.scripts]
dbay-sre-mcp = "dbay_sre_mcp.__main__:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
