[project]
name = "echomem"
version = "0.1.0"
description = "Local-first agent memory hub for Claude Code / openclaw / hermes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sqlite-vec>=0.1.7",
    "python-ulid>=3.0.0",
    "structlog>=24.4.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.7.0",
]

[project.scripts]
echomem = "echomem.cli:app"
echomem-mcp-shim = "echomem.mcp_shim.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echomem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
