[project]
name = "lakeon-cli"
version = "0.1.0"
description = "LakeOn Serverless PostgreSQL CLI"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
lakeon = "lakeon_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lakeon_cli"]
