[project]
name = "dbay"
version = "0.1.0"
description = "DBay Python SDK — Serverless PostgreSQL, Knowledge Base, and Memory for AI Agents"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbay"]
