[project]
name = "dbay-branch-version-benchmark"
version = "0.1.0"
description = "DBay.cloud branch and version benchmark harness"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "psycopg[binary]>=3.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dbay-branch-version-bench = "dbay_branch_version.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbay_branch_version"]

[tool.pytest.ini_options]
testpaths = ["tests"]
